# heldar

./: .env.example  .env.production.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSING.md  Makefile  README.md  ROADMAP.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  cloudflare-workers.yml  release.yml
apps/ai/: Dockerfile  README.md  requirements-anpr.txt  requirements.txt  worker.py
apps/web/: .gitignore  DESIGN.md  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
apps/web/e2e/: README.md  camera.spec.ts  dashboard.spec.ts  playback.spec.ts  wall.spec.ts
apps/web/src/: App.tsx  index.css  main.tsx  modules.tsx
apps/web/src/components/: AiPanel.tsx  AppShell.tsx  CameraCard.tsx  CameraConfigPanel.tsx  LiveView.tsx  Login.tsx  RecordingPanels.tsx  StatusBadge.tsx  SystemBar.tsx  Timeline.tsx  WebhooksPanel.tsx  ZonePanel.tsx  ui.tsx
apps/web/src/lib/: api.ts  codec.ts  format.ts  rendezvous.ts  types.ts  usePoll.ts  whep.ts
apps/web/src/pages/: AddCamera.tsx  Ai.tsx  Backup.tsx  CameraDetail.tsx  Dashboard.tsx  Discover.tsx  Entry.tsx  Incidents.tsx  Movement.tsx  Playback.tsx  Plugins.tsx  Search.tsx  System.tsx
crates/heldar-entry/: Cargo.toml  README.md
crates/heldar-entry/src/: anpr.rs  config.rs  lib.rs  models.rs  retention.rs  routes.rs  schema.rs  schema.sql
crates/heldar-kernel/: Cargo.toml  README.md
crates/heldar-kernel/catalog/: heldar-catalog.json
crates/heldar-kernel/migrations/: 0001_init.sql  0002_observability.sql  0002_settings.sql  0003_ai.sql  0003_login_lockout.sql  0004_zones.sql  0005_auth.sql  0006_outbox.sql  0007_zone_event_time_index.sql  0008_segments_locked_index.sql  0009_evidence_locked.sql  0010_camera_storage_audio.sql  0011_snapshot_schedules.sql  0012_record_schedule.sql  0013_event_record_columns.sql  0014_backup_destinations.sql  0015_backup_policies_jobs.sql  0016_onvif.sql  0017_mirror_anr.sql  0018_camera_isapi.sql  0019_webhooks.sql  0020_modules.sql  0021_drop_app_state.sql  0022_idx_segments_incident.sql  0023_fanout_durability.sql
crates/heldar-kernel/src/: auth.rs  camera_url.rs  config.rs  db.rs  env.rs  error.rs  lib.rs  models.rs  modules.rs  registry.rs  repo.rs  state.rs  util.rs
crates/heldar-kernel/src/models/: auth.rs  backup.rs  camera.rs  devices.rs  mod.rs  perception.rs  scheduling.rs  webhooks.rs
crates/heldar-kernel/src/routes/: ai.rs  anr.rs  auth.rs  backup.rs  camera_config.rs  cameras.rs  discovery.rs  health.rs  incidents.rs  liveview.rs  metrics.rs  mod.rs  modules.rs  onvif.rs  outbox.rs  playback.rs  playback_sessions.rs  recording_control.rs  recordings.rs  registry.rs  schedules.rs  snapshot_schedules.rs  system.rs  webhooks.rs  zones.rs
crates/heldar-kernel/src/services/: anr.rs  backup.rs  clip.rs  consumer.rs  discovery.rs  email.rs  fanout.rs  fleet_register.rs  health.rs  indexer.rs  mediamtx.rs  metrics.rs  mirror.rs  mod.rs  modules.rs  notifier.rs  onvif.rs  playback_session.rs  recorder.rs  registry.rs  remote_access.rs  retention.rs  sampler.rs  schedule_watcher.rs  secrets.rs  settings.rs  snapshot.rs  snapshot_scheduler.rs  storage.rs  webhooks.rs  webrtc_rendezvous.rs  zones.rs
crates/heldar-kernel/src/services/camera_config/: digest.rs  hikvision.rs  mod.rs  types.rs
crates/heldar-movement/: Cargo.toml  README.md
crates/heldar-movement/src/: breach.rs  config.rs  lib.rs  models.rs  reid.rs  routes.rs  schema.rs  schema.sql
crates/heldar-search/: Cargo.toml  README.md
crates/heldar-search/src/: config.rs  lib.rs  planner.rs  proof.rs  query.rs  retention.rs  routes.rs  schema.rs  schema.sql
crates/heldar-server/: Cargo.toml
crates/heldar-server/src/: main.rs  verticals.rs  wasm_plugins.rs
crates/heldar-wasm/: Cargo.toml
crates/heldar-wasm/src/: lib.rs
docs/: ACCESS-CONTROL.md  AI-WORKERS.md  HA.md  MOVEMENT.md  OBSERVABILITY.md  OPEN-CORE-SPLIT.md  PRODUCTION.md  REMOTE-ACCESS.md  SEARCH.md  commissioning-checklist.md  sizing.md
examples/hello-module/: README.md  sidecar.py
examples/registry/: README.md  example-catalog.json  example-catalog.json.sig
examples/wasm-plugin/: Cargo.toml
examples/wasm-plugin/src/: lib.rs
infra/mediamtx/: mediamtx.yml
infra/systemd/: README.md  heldar-core.service  heldar.env.example  mediamtx.service
scripts/: build-appliance-image.sh  dev.sh  e2e_stack.sh  prepare-open-repo.sh  release.sh  run_stack.sh  setup_mediamtx.sh  sign-catalog.sh  smoke_web.sh  synth_camera.sh  validate.sh  validate_ai.sh  validate_entry.sh  validate_movement.sh  validate_rbac.sh  validate_search.sh  validate_zones.sh
website/: docusaurus.config.ts  package-lock.json  sidebars.ts  wrangler.jsonc
website/docs/: intro.md
website/docs/concepts/: architecture.md  open-core.md
website/docs/develop/: ai-worker.md  build-a-module.md  registry.md  sidecar-plugins.md  wasm-plugins.md  webhooks.md
website/docs/getting-started/: deploy.md  quickstart.md
website/docs/operate/: hosting-the-docs.md  index.md
website/src/css/: custom.css
website/src/pages/: index.module.css  index.tsx
