[package]
name = "heldar-entry"
version = "0.1.7"
edition = "2021"
rust-version = "1.85"
description = "Heldar Access Control — generic ANPR authorization, vehicle/visitor/watchlist registry, guard workflow, and entry reports for gated-entry deployments. Built on the heldar-kernel platform."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Straits-AI/heldar"
keywords = ["anpr", "alpr", "access-control", "cctv", "surveillance"]
categories = ["multimedia::video"]

[lib]
name = "heldar_entry"
path = "src/lib.rs"

[dependencies]
heldar-kernel = { path = "../heldar-kernel", version = "0.1.7" }
axum = { version = "0.8", features = ["macros"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "chrono",
    "macros",
    "json",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tokio = { version = "1", features = ["fs", "time"] }
async-trait = "0.1"
anyhow = "1"
