[package]
name = "heldar-search"
version = "0.1.5"
edition = "2021"
rust-version = "1.85"
description = "Heldar semantic search — generic searchable visual-event memory. Deterministic structured search over kernel event facts + an LLM-as-query-PLANNER natural-language layer (never the source of truth) + a proof layer (claim levels → evidence → confidence). Built on the heldar-kernel platform."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Straits-AI/heldar"
keywords = ["search", "cctv", "surveillance", "video", "events"]
categories = ["multimedia::video"]

[lib]
name = "heldar_search"
path = "src/lib.rs"

[dependencies]
heldar-kernel = { path = "../heldar-kernel", version = "0.1.5" }
axum = { version = "0.8", features = ["macros"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "chrono",
    "macros",
    "json",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1"
# Background query-log retention loop.
tokio = { version = "1", features = ["time"] }
