[package]
name = "heldar-occupancy-plugin"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Example Heldar Wasm plugin: emits an occupancy.high event when a batch has many people."
publish = false

# Standalone (NOT part of the heldar workspace — it targets wasm32-unknown-unknown).
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
